terraform-infra/modules/ec2/main.tf
resource "aws_security_group" "this" {
  name        = "tummoc-sg"
  description = "tummoc-opened-neccesary"
  vpc_id      = var.vpc_id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.my_ip]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "App Port 8080"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(var.common_tags, {
    Name = "tummoc-sg"
  })
}

resource "aws_instance" "micro" {
  ami           = var.ami_id
  instance_type = "t3.micro"
  subnet_id     = var.subnet_id
  key_name      = var.key_name

  vpc_security_group_ids = [aws_security_group.this.id]

  root_block_device {
    volume_size = 8
    volume_type = "gp3"
  }

  tags = merge(var.common_tags, {
    Name = "tummoc-free-tier"
  })
}

resource "aws_instance" "ram-4gb" {
  ami           = var.ami_id
  instance_type = "c7i-flex.large"
  subnet_id     = var.subnet_id
  key_name      = var.key_name

  vpc_security_group_ids = [aws_security_group.this.id]

  root_block_device {
    volume_size = 8
    volume_type = "gp3"
  }

  tags = merge(var.common_tags, {
    Name = "tummoc-jenkins"
  })
}
